--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
-    <link rel="stylesheet"href="../ice-cream-shop-website-template\css\login.css">
+    <link href="css/login.css" rel="stylesheet">
 
     <!-- Favicon -->
     <link href="img/Creamit img/Logo.jpeg" rel="icon">
